Project4-ALB-Create/Nat-Gateway.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: This template creates a nat gateway in each the public subnets if the existing stack

Parameters:
  ExportVpcStackName:
    Description: The name of the vpc stack that exports values.
    Type: String

Resources:
#Allocate Elastic IP for Nate Gateway 1
  NatGateway1EIP: 
    Type: AWS::EC2::EIP
    Properties:
      Domain: VPC
      Tags:
        - Key: Name
          Value: EIP1

#Allocate Elastic IP for Nate Gateway 2
  NatGateway2EIP: 
    Type: AWS::EC2::EIP
    Properties:
      Domain: VPC
      Tags:
        - Key: Name
          Value: EIP2

# Create Nat Gateway 1 in Public Subnet 1
  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId: 
        Fn::ImportValue: !Sub ${ExportVpcStackName}-PublicSubnet1
      Tags: 
        - Key: Name
          Value: Nate Gateway Public Subnet 1

# Create Nat Gateway 1 in Public Subnet 1
  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId: 
        Fn::ImportValue: !Sub ${ExportVpcStackName}-PublicSubnet2
      Tags: 
        - Key: Name
          Value: Nate Gateway Public Subnet 2

# Create Private Route Table 1 
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        -  Key: Name 
           Value: Private Route Table 1
      VpcId: 
        Fn::ImportValue: !Sub ${ExportVpcStackName}-ProjectVPC
      
# Add a route to point internet-bound traffic to Nat Gateway 1   
  PrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1
      RouteTableId: !Ref PrivateRouteTable1

# Associate Private Subnet 1 with Private Route Table 1
  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId:
        Fn::ImportValue: !Sub ${ExportVpcStackName}-PrivateSubnet1

# Associate Private Subnet 3 with Private Route Table 1
  PrivateSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId:
        Fn::ImportValue: !Sub ${ExportVpcStackName}-PrivateSubnet3

# Create Private Route Table 2
  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        -  Key: Name 
           Value: Private Route Table 2
      VpcId: 
        Fn::ImportValue: !Sub ${ExportVpcStackName}-ProjectVPC
      
# Add a route to point internet-bound traffic to Nat Gateway 2  
  PrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2
      RouteTableId: !Ref PrivateRouteTable2

# Associate Private Subnet 1 with Private Route Table 2
  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId:
        Fn::ImportValue: !Sub ${ExportVpcStackName}-PrivateSubnet2

# Associate Private Subnet 3 with Private Route Table 1
  PrivateSubnet4RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId:
        Fn::ImportValue: !Sub ${ExportVpcStackName}-PrivateSubnet4
